Fixed some things.

--- a/views/post-parts/header.html.twig
+++ b/views/post-parts/header.html.twig
@@ -12,7 +12,7 @@
             </a>
         </h1>
         <nav class="col-12 col-md-9 order-0 order-md-1" role="navigation">
-            {% include "post-parts/menu.html.twig" with {'items': menu.get_items} %}
+            {% include "post-parts/menu.html.twig" with {'items': menu.primary.get_items} %}
         </nav>
     </div>
 </header>
