--- a/views/post-parts/footer.html.twig
+++ b/views/post-parts/footer.html.twig
@@ -11,7 +11,7 @@
     </div>
 </footer>
 
-<footer id="footer" class="website-footer bg-secondary text-light">
+<footer id="footer" class="website-footer bg-primary text-light">
     <div class="container p-4">
         <div class="row">
             <div class="col-12">
