Fixed some things.

--- a/views/post-parts/content.html.twig
+++ b/views/post-parts/content.html.twig
@@ -7,7 +7,7 @@
         </header>
         <main class="col-12 wrapper {{ sidebar_class }}">
             {% block content %}
-                Požadovaná stránka bohužel nebyla nalezena.
+                Požadovaná stránka '{{ post.link }}' bohužel nebyla nalezena.
             {% endblock content %}
         </main>
     </div>
