--- a/views/post-types/home.html.twig
+++ b/views/post-types/home.html.twig
@@ -1,4 +1,4 @@
-{% extends "layouts/default-page.html.twig" %}
+{% extends "post-types/page.html.twig" %}
 
 {% block page_signpost %}
     {% include 'post-parts/page-signpost.html.twig' with {posts: posts} %}
