--- a/views/layouts/default-page.html.twig
+++ b/views/layouts/default-page.html.twig
@@ -47,20 +47,7 @@
     {% include 'post-parts/header.html.twig' %}
 {% endblock body_header %}
 {% block body_content %}
-    <section id="content" role="main" class="container">
-        <div class="row">
-            <header class="col-12">
-                {% if title %}
-                    <h2>{{ title }}</h2>
-                {% endif %}
-            </header>
-            <main class="col-12 wrapper {{ sidebar_class }}">
-                {% block content %}
-                    Požadovaná stránka bohužel nebyla nalezena.
-                {% endblock content %}
-            </main>
-        </div>
-    </section>
+    {% include 'post-parts/content.html.twig' %}
 {% endblock body_content %}
 {% block body_footer %}
     {% include 'post-parts/footer.html.twig' %}
