--- a/views/page-customs/page-plugin.html.twig
+++ b/views/page-customs/page-plugin.html.twig
@@ -3,5 +3,5 @@
 {% block content %}
     <div class="container content-wrapper">
         {{ content }}
-    </div><!-- /content-wrapper -->
+    </div>
 {% endblock %}
