--- a/views/post-types/page.html.twig
+++ b/views/post-types/page.html.twig
@@ -5,11 +5,12 @@
         <main class="container content-wrapper">
             <article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
                 {% include 'post-parts/page-banner-header-row.html.twig' with {image: post.thumbnail, title: post.title} %}
-                {% include 'post-parts/basic-content-section.html.twig'with {title: post.title} %}
+                {% include 'post-parts/basic-content-section.html.twig'with {title: post.title, content: post.content} %}
             </article>
         </main>
     {% endblock page_content %}
     {% block page_signpost %}
+        <!-- {{ posts|length }} -->
         {% set subPosts = posts|default and posts|length > 0 ? posts : post.children %}
         {% include 'post-parts/page-signpost.html.twig' with {posts: subPosts} %}
         {% include 'post-parts/pagination.html.twig' with { pagination: subPosts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
