--- a/views/post-parts/page-signpost.html.twig
+++ b/views/post-parts/page-signpost.html.twig
@@ -5,7 +5,7 @@
                 {% set imgSrc = post.thumbnail.src('small')|default(site.theme.link ~ '/images/symbols/reaction.png') %}
                 {% set imgAlt = post.thumbnail.alt|default(post.title) %}
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                    <a class="card signpost-card bg-light border-0 h-100" href="{{ post.path }}"
+                    <a class="card signpost-card bg-light border-0 h-100 text-dark text-decoration-none" href="{{ post.path }}"
                        style="background-color: rgba(100, 100, 255, .1) !important;">
                         <img src="{{ imgSrc }}" class="card-img-top mx-auto" alt="{{ imgAlt }}" style="max-width: 85%;">
                         <div class="card-body">
