--- a/views/post-parts/page-banner-header-row.html.twig
+++ b/views/post-parts/page-banner-header-row.html.twig
@@ -1,19 +1,15 @@
 {% set imageSrc = post.thumbnail.image.src('medium')|default(site.theme.link ~ '/images/photos/foto.png') %}
 
-<header class="row bg-primary text-white mb-5 border border-primary border-2">
-    <div class="col-12 col-lg-6" style="background-image: url({{ imageSrc }}); background-position: center; background-size: cover; min-height: 20em;"></div>
-    <div class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center align-content-center justify-items-center text-center">
-        {% if isHome %}
-            <h1 class="p-5" style="font-size: 6em; text-transform: capitalize;">
-                {{ site.name }}
-            </h1>
-        {% else %}
-            <h1 class="p-5 pb-2" style="font-size: 4em; text-transform: capitalize;">
-                {{ site.name }}
-            </h1>
-            <h2 class="p-5 pt-2">
-                {{ post.title }}
-            </h2>
-        {% endif %}
+<header class="row page-banner bg-primary text-white mb-5 border border-primary border-2">
+    <div class="col-12 col-lg-6 image-box" style="background-image: url({{ imageSrc }});">
+        <!-- {{ site.name }} - post.title -->
+    </div>
+    <div class="col-12 col-lg-6 title-box d-flex flex-column justify-content-center text-center">
+        <h1 class="p-5 text-capitalize {{ isHome ? ' single-heading pb-2 ' : '' }}">
+            {{ site.name }}
+        </h1>
+        <h2 class="p-5 pt-2 {{ isHome ? ' d-none ' : '' }}">
+            {{ post.title }}
+        </h2>
     </div>
 </header>
