--- a/views/post-parts/page-banner-header-row.html.twig
+++ b/views/post-parts/page-banner-header-row.html.twig
@@ -5,7 +5,7 @@
         <!-- {{ site.name }} - post.title -->
     </div>
     <div class="col-12 col-lg-6 title-box d-flex flex-column justify-content-center text-center">
-        <h1 class="p-5 text-capitalize {{ isHome ? ' single-heading pb-2 ' : '' }}">
+        <h1 class="p-5 text-capitalize {{ isHome ? ' single-heading ' : ' pb-2 ' }}">
             {{ site.name }}
         </h1>
         <h2 class="p-5 pt-2 {{ isHome ? ' d-none ' : '' }}">
