--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -32,7 +32,7 @@ $rfs-base-value: 0.8rem;
     max-width: 85%;
   }
 
-  :hover {
+  &:hover {
     background-color: rgba(200, 200, 255, .25) !important;
   }
 }
