--- a/views/post-parts/basic-content-section.html.twig
+++ b/views/post-parts/basic-content-section.html.twig
@@ -1,5 +1,7 @@
-<section class="row">
+{% if content and content|length > 0 %}
+<section class="row mx-3">
     <div class="col-12">
         {{ content }}
     </div>
 </section>
+{% endif %}
