--- a/views/page-customs/page-kontakt.html.twig
+++ b/views/page-customs/page-kontakt.html.twig
@@ -11,42 +11,65 @@
                     </section>
                 {% endif %}
                 <section class="col-12 col-lg-6">
-                    {{ dump(post.meta()) }}
-
-                    {{ dump(contacts) }}
-
-                    {{ dump(contact) }}
-
-
-                    <h3>{{ post.meta('name') }}</h3>
-                    <address>
-                        <p>{{ post.meta('department') }}</p>
-                        <p>{{ post.meta('faculty') }}</p>
-                        <p>{{ post.meta('university') }}</p>
-                        <p>{{ post.meta('street') }} {{ post.meta('house_number') }}</p>
-                        <p>{{ post.meta('postal_code') }} {{ post.meta('city') }}</p>
-                        <p>{{ post.meta('phone') }}</p>
-                        <p>{{ post.meta('fax') }}</p>
-                        <p>{{ post.meta('e_mail') }}</p>
-                        <p>{{ post.meta('gps') }}</p>
-                    </address>
+                    {% for singleContact in contacts %}
+                        <div class="department-contact mb-5">
+                            <h3>{{ singleContact.name|default(singleContact.department) }}</h3>
+                            <address>
+                                {% if singleContact.department %}
+                                    <strong>{{ singleContact.department }}</strong><br>
+                                {% endif %}
+                                {% if singleContact.department %}
+                                    {{ singleContact.faculty }}<br>
+                                {% endif %}
+                                {% if singleContact.department %}
+                                    {{ singleContact.university }}<br>
+                                {% endif %}
+                                {% if singleContact.department %}
+                                    {{ singleContact.street }} {{ singleContact.house_number }}<br>
+                                {% endif %}
+                                {% if singleContact.department %}
+                                    {{ singleContact.postal_code }} {{ singleContact.city }}<br>
+                                {% endif %}
+                                {% if singleContact.department %}
+                                    Telefon: {{ singleContact.phone }}<br>
+                                {% endif %}
+                                {% if singleContact.department %}
+                                    Fax: {{ singleContact.fax }}<br>
+                                {% endif %}
+                                {% if singleContact.department %}
+                                    E-mail: {{ singleContact.e_mail }}<br>
+                                {% endif %}
+                                {% if singleContact.department %}
+                                    GPS: {{ singleContact.gps }}<br>
+                                {% endif %}
+                            </address>
+                        </div>
+                    {% endfor %}
                 </section>
                 <section class="col-12 col-lg-6">
-                    <h4>Didaktika</h4>
-                    {% for contact in contacts %}
-                        <h5>{{ contact }}</h5>
-                        {% if post.meta('position') %}
-                            <p>{{ post.meta('position') }}</p>
-                        {% endif %}
-                        {% if post.meta('phone') %}
-                            <p>Telefon: {{ post.meta('phone') }}</p>
-                        {% endif %}
-                        {% if post.meta('fax') %}
-                            <p>Fax: {{ post.meta('fax') }}</p>
-                        {% endif %}
-                        {% if post.meta('e_mail') %}
-                            <p>E-mail: {{ post.meta('e_mail') }}</p>
-                        {% endif %}
+                    {% for department in departments %}
+                        <div class="sub-department mb-5">
+                            <h4>
+                                {{ department.name|default('Další kontakty') }}
+                            </h4>
+                            {% for person in department.persons %}
+                                <div class="sub-department-person mb-3">
+                                    <h5>{{ person }}</h5>
+                                    {% if person.meta('position') %}
+                                        <strong>{{ person.meta('position') }}</strong><br>
+                                    {% endif %}
+                                    {% if person.meta('phone') %}
+                                        Telefon: {{ person.meta('phone') }}<br>
+                                    {% endif %}
+                                    {% if person.meta('fax') %}
+                                        Fax: {{ person.meta('fax') }}<br>
+                                    {% endif %}
+                                    {% if person.meta('e_mail') %}
+                                        E-mail: {{ person.meta('e_mail') }}<br>
+                                    {% endif %}
+                                </div>
+                            {% endfor %}
+                        </div>
                     {% endfor %}
                 </section>
             </div>
