--- a/views/layouts/default-page.html.twig
+++ b/views/layouts/default-page.html.twig
@@ -1,4 +1,5 @@
 {%- set html_lang = language|default(site.language|default('cs-CZ')) -%}
+{%- set title = title|default(site.name|default) -%}
 <!doctype html>
 <!--[if lt IE 9]><html class="no-js no-svg ie lt-ie9 lt-ie8 lt-ie7" {{ site.language_attributes }} prefix="og: http://ogp.me/ns#"><![endif]-->
 <!--[if IE 9]><html class="no-js no-svg ie ie9 lt-ie9 lt-ie8" {{ site.language_attributes }} prefix="og: http://ogp.me/ns#"><![endif]-->
@@ -11,9 +12,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name='format-detection' content='telephone=yes'>
     <meta name='DC.Language' content='{{ html_lang }}'>
-    <title>
-        {% block html_title %}{{ title|default(site.name|default) }}{% endblock html_title %}
-    </title>
     <meta name="description" content="{% block html_description %}{{ description|default(default_description|default(oswis.web.description)) }}{% endblock html_description %}">
     <meta name='author' content='{% block meta_author %}{{ author|default('Jakub Zak (https://jakubzak.cz)') }}{% endblock meta_author %}'>
     <meta name='copyright' content='{% block meta_copyright %}{{ copyright|default('Jakub Zak (https://jakubzak.cz)') }}{% endblock meta_copyright %}'>
@@ -22,10 +20,10 @@
     <link rel="pingback" href="{{ site.pingback_url }}"/>
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name='Revisit-After' content='{% block meta_revisit_after %}{{ revisit_after|default('1 day') }}{% endblock meta_revisit_after %}'>
-    <meta name="application-name" content="{% block meta_app_name %}{{ oswis.app.name|default(block('html_title')) }}{% endblock %}">
+    <meta name="application-name" content="{% block meta_app_name %}{{ oswis.app.name|default(title) }}{% endblock %}">
     <meta name="apple-mobile-web-app-title" content="{% block meta_app_title_apple %}{{ block('meta_app_name') }}{% endblock %}">
     <meta property="og:site_name" content="{{ block('meta_app_name') }}">
-    <meta property="og:title" content="{{ block('html_title') }}">
+    <meta property="og:title" content="{{ title }}">
     <meta property="og:description" content="{{ block('html_description') }}">
     <meta property="og:locale" content="{{ html_lang }}">
     <meta property="og:type" content="{% block og_type %}{{ og_type|default('website') }}{% endblock %}">
