--- a/views/post-parts/page-banner-header-row.html.twig
+++ b/views/post-parts/page-banner-header-row.html.twig
@@ -1,4 +1,4 @@
-{% set imageSrc = post.thumbnail.image.src('medium')|default(site.theme.link ~ '/images/photos/foto.png') %}
+{% set imageSrc = image.src|default(site.theme.link ~ '/images/photos/foto.png') %}
 
 <header class="row page-banner bg-primary text-white mb-3 border border-primary border-2">
     <div class="col-12 col-lg-6 image-box" style="background-image: url({{ imageSrc }});">
