--- a/views/post-types/page.html.twig
+++ b/views/post-types/page.html.twig
@@ -5,7 +5,9 @@
         <main class="container content-wrapper">
             <article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
                 {% include 'post-parts/page-banner-header-row.html.twig' with {image: post.thumbnail, title: post.title} %}
-                {% include 'post-parts/basic-content-section.html.twig'with {title: post.title, content: post.content} %}
+                {% block content %}
+                    {% include 'post-parts/basic-content-section.html.twig'with {title: post.title, content: post.content} %}
+                {% endblock content %}
             </article>
         </main>
     {% endblock page_content %}
