--- a/views/post-types/single.html.twig
+++ b/views/post-types/single.html.twig
@@ -1,8 +1,8 @@
-{% extends "layouts/default-page.html.twig" %}
+{% extends "post-types/page.html.twig" %}
 
 {% block content %}
-    <div class="content-wrapper">
-        <article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
+    <div class="row">
+        <article class="col-12 post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
             <img src="{{ post.thumbnail.src|resize(1200, 300) }}" alt="{{ post.title }}">
             <section class="article-content">
                 <h1 class="article-h1">{{ post.title }}</h1>
