Fixed some things.

--- a/views/post-types/contact_person.html.twig
+++ b/views/post-types/contact_person.html.twig
@@ -1,7 +1,5 @@
-{% extends "layouts/default-page.html.twig" %}
+{% extends "post-types/page.html.twig" %}
 
-{% block body_content %}
-
-    I am person. Who are you?
-
-{% endblock body_content %}
+{% block content %}
+    <h3>{{ post }}</h3>
+{% endblock content %}
