--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -1,4 +1,7 @@
 {% extends "layouts/default-page.html.twig" %}
+
+{# Page with interactive industry map. #}
+
 {% set map = site.theme.link ~ '/images/others/map.png' %}
 
 {% block body_content %}
