--- a/views/post-types/errors/404.html.twig
+++ b/views/post-types/errors/404.html.twig
@@ -1,5 +1,5 @@
-{% extends "layouts/default-page.html.twig" %}
+{% extends "post-types/page.html.twig" %}
 
 {% block content %}
-    Sorry, we couldn't find what you're looking for.
+    Požadovaná stránka nebyla nalezena.
 {% endblock %}
