--- a/views/post-types/search.html.twig
+++ b/views/post-types/search.html.twig
@@ -1,5 +1,5 @@
 {# see `archive.twig` for an alternative strategy of extending templates #}
-{% extends "layouts/default-page.html.twig" %}
+{% extends "post-types/page.html.twig" %}
 
 {% block content %}
     {# see `base.twig:27` for where this block's content will be inserted #}
@@ -10,4 +10,4 @@
 
         {% include 'post-parts/pagination.html.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
     </div>
-{% endblock %}
+{% endblock content %}
