--- a/views/custom-templates/chemical-industry-materials.html.twig
+++ b/views/custom-templates/chemical-industry-materials.html.twig
@@ -1,5 +1,10 @@
 {% extends "post-types/page.html.twig" %}
 
+{#
+Theme for page with list of chemical industry materials.
+This page theme can be selected as custom theme of single "page" type post (due to config in "theme/page_chemical-industry-materials.php").
+#}
+
 {% block page_content %}
     <main class="container content-wrapper">
         <article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
