--- a/views/layouts/default-page.html.twig
+++ b/views/layouts/default-page.html.twig
@@ -42,13 +42,13 @@
 <body class="{{ body_class }}" data-template="layouts/default-page.html.twig">
 
 {% block body_header %}
-    {% include 'post-parts/header.html.twig' %}
+    {% include 'post-parts/layout/header.html.twig' %}
 {% endblock body_header %}
 {% block body_content %}
-    {% include 'post-parts/content.html.twig' %}
+    {% include 'post-parts/layout/content.html.twig' %}
 {% endblock body_content %}
 {% block body_footer %}
-    {% include 'post-parts/footer.html.twig' %}
+    {% include 'post-parts/layout/footer.html.twig' %}
     {{ function('wp_footer') }}
 {% endblock body_footer %}
 
