--- a/views/custom-templates/periodical-table.html.twig
+++ b/views/custom-templates/periodical-table.html.twig
@@ -8,14 +8,22 @@ This page theme can be selected as custom theme of single "page" type post (due 
 {% set periodicalTable = site.theme.link ~ '/images/others/periodical-table.png' %}
 
 {% block body_content %}
-    <div class="container">
-        <article class="row post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-            <section class="col-12">
-                <img src="{{ periodicalTable }}" class="img-fluid d-block mx-auto" alt="Periodická soustava prvků">
-            </section>
-            <section class="col-12">
-                {{ post.content }}
-            </section>
-        </article>
+    <div class="container my-5">
+        {% block periodical_table %}
+        <div class="row post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
+            <div class="col-12 periodical-table" id="interactive-periodical-table">
+                {% include 'post-parts/periodical-table/interactive-periodical-table.html.twig' %}
+            </div>
+        </div>
+        {% endblock periodical_table %}
+    </div>
+    <div class="container-fluid my-5">
+        {% block periodical_table %}
+        <div class="row post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
+            <div class="col-12">
+                {% include 'post-parts/periodical-table/interactive-periodical-table.html.twig' %}
+            </div>
+        </div>
+        {% endblock periodical_table %}
     </div>
 {% endblock body_content %}
