--- a/views/post-parts/page-signpost.html.twig
+++ b/views/post-parts/page-signpost.html.twig
@@ -5,12 +5,13 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <a class="card signpost-card border-0 h-100 text-dark text-decoration-none" href="{{ post.path }}">
                         {% if post.meta('_menu_image')|default %}
-                            {% set image = get_image(post.meta('_menu_image')) %}
-                            <img src="{{ image.src }}" class="card-img-top mx-auto mt-4" alt="{{ post.title }}">
+                            <img src="{{ get_image(post.meta('_menu_image')).src }}"
+                                 class="card-img-top mx-auto mt-4"
+                                 alt="{{ post.title }}" />
                         {% endif %}
-                        <div class="card-body d-flex flex-column justify-content-end">
+                        <div class="card-body d-flex flex-column justify-content-start">
                             <h5 class="card-title">{{ post.title }}</h5>
-                            <p class="card-text">{{ post.description }}</p>
+                            <p class="card-text">{{ post.post_excerpt }}</p>
                         </div>
                     </a>
                 </div>
