Updated periodical table.

--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -1,6 +1,7 @@
 $rfs-base-value: 0.8rem;
 
 @import "bootstrap-up";
+@import "interactive-periodical-table";
 
 .footer-eu-msmt-image {
   max-height: 6em;
