--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -3,8 +3,11 @@
 .interactive-periodical-table {
   display: grid;
   width: 100%;
+  max-height: 80vh;
   grid-template-columns: 1fr repeat(18, 2fr);
-  grid-template-rows: repeat(7, 2fr) 1fr repeat(2, 2fr);
+  grid-template-rows: 2fr repeat(7, 3fr) 1fr repeat(2, 3fr);
   grid-gap: 0;
   text-align: center;
 }
+
+
