--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -3,6 +3,8 @@
 .interactive-periodical-table {
   display: grid;
   width: 100%;
+  min-width: 780px;
+  min-height: 580px;
   max-height: 80vh;
   grid-template-columns: 1fr repeat(18, 2fr);
   grid-template-rows: 2fr repeat(7, 3fr) 1fr repeat(2, 3fr);
